iniciando o index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,62 @@
 </head>
 
 <body>
+    <span class="top-center">
+        <div>
+            <p>Maratona Invertida da Kenzie</p>
+            <p>CHEGOU A HORA DE VOCÊ DERROTAR O VECNA QUE ANDA TE IMPEDINDO DE APRENDER PROGRAMAÇÃO!</p>
+            <p>Aprenda a programar do zero e gratuitamente em apenas5 horas, construa um projeto próprio e ganhe um certificado!</p>
+        </div>
+    </span>
+    <span class="body-left">
+        <div class="temporadas">
+            <p class="temporadas">Temporadas</p>
+        </div>
+        <div class="temp-temp">
+            <p class="temp-all">Todas</p>
+            <p class="temp-1">Temporada 1</p>
+            <p class="temp-2">Temporada 2</p>
+            <p class="temp-3">Temporada 3</p>
+        </div>
+        <div class="temp-3-content">
+            <p class="title">Maratona Invertida</p>
+            <p class="temp-title">Temporada 3</p>
+            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de graça!</p>
+            <p class="add-to-line">Adicionar à fila</p>
+        </div>
+        <div class="temp-2-content">
+            <p class="title">Maratona Invertida</p>
+            <p class="temp-title">Temporada 2</p>
+            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de graça!</p>
+            <p class="add-to-line">Adicionar à fila</p>
+        </div>
+        <div class="temp-1-content">
+            <p class="title">Maratona Invertida</p>
+            <p class="temp-title">Temporada 1</p>
+            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de graça!</p>
+            <p class="add-to-line">Adicionar à fila</p>
+        </div>
+    </span>
+    <span class="body-right">
+        <div class="reproduction-line-title">
+            <p class="line-text">Fila de reprodução</p>
+        </div>
+        <div class="reproduction-line-temp-1">
+            <p class="line-title">Maratona Invertida</p>
+            <p class="line-temp">Temporada 1</p>
+            <p class="line-watch">Assistir agora</p>
+        </div>
+        <div class="reproduction-line-temp-2">
+            <p class="line-title">Maratona Invertida</p>
+            <p class="line-temp">Temporada 2</p>
+            <p class="line-watch">Assistir agora</p>
+        </div>
+        <div class="reproduction-line-temp-3">
+            <p class="line-title">Maratona Invertida</p>
+            <p class="line-temp">Temporada 3</p>
+            <p class="line-watch">Assistir agora</p>
+        </div>
+    </span>
 </body>
 
 </html>
