--- a/index.html
+++ b/index.html
@@ -5,43 +5,62 @@
     <title>Maratona Invertida</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <span class="top-center">
-        <div>
-            <p>Maratona Invertida da Kenzie</p>
-            <p>CHEGOU A HORA DE VOCÊ DERROTAR O VECNA QUE ANDA TE IMPEDINDO DE APRENDER PROGRAMAÇÃO!</p>
-            <p>Aprenda a programar do zero e gratuitamente em apenas5 horas, construa um projeto próprio e ganhe um certificado!</p>
+        <div class="logo">
+            <img src="img/logoMaratona.png" alt="Logo image">
+        </div>
+        <div class="background-img-top">
+            <div class="init-text">
+                <p class="mar-inv-ken">Maratona Invertida da Kenzie</p>
+                <p class="text-caps">CHEGOU A HORA DE VOCÊ DERROTAR O VECNA QUE ANDA TE IMPEDINDO DE APRENDER
+                    PROGRAMAÇÃO!</p>
+                <p class="text-non-caps">Aprenda a programar do zero e gratuitamente em apenas5 horas, construa um
+                    projeto próprio e ganhe um certificado!</p>
+            </div>
         </div>
     </span>
     <span class="body-left">
         <div class="temporadas">
-            <p class="temporadas">Temporadas</p>
+            <p>Temporadas</p>
         </div>
         <div class="temp-temp">
-            <p class="temp-all">Todas</p>
-            <p class="temp-1">Temporada 1</p>
-            <p class="temp-2">Temporada 2</p>
-            <p class="temp-3">Temporada 3</p>
+            <div class="margin">
+                <p class="temp-all">Todas</p>
+            </div>
+            <div class="margin">
+                <p class="temp-1">Temporada 1</p>
+            </div>
+            <div class="margin">
+                <p class="temp-2">Temporada 2</p>
+            </div>
+            <div class="margin">
+                <p class="temp-3">Temporada 3</p>
+            </div>
         </div>
         <div class="temp-3-content">
             <p class="title">Maratona Invertida</p>
             <p class="temp-title">Temporada 3</p>
-            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de graça!</p>
+            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de
+                graça!</p>
             <p class="add-to-line">Adicionar à fila</p>
         </div>
         <div class="temp-2-content">
             <p class="title">Maratona Invertida</p>
             <p class="temp-title">Temporada 2</p>
-            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de graça!</p>
+            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de
+                graça!</p>
             <p class="add-to-line">Adicionar à fila</p>
         </div>
         <div class="temp-1-content">
             <p class="title">Maratona Invertida</p>
             <p class="temp-title">Temporada 1</p>
-            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de graça!</p>
+            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de
+                graça!</p>
             <p class="add-to-line">Adicionar à fila</p>
         </div>
     </span>
