--- a/index.html
+++ b/index.html
@@ -1,89 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Maratona Invertida</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-</head>
+  </head>
 
-<body>
-    <span class="top-center">
-        <div class="logo">
-            <img src="img/logoMaratona.png" alt="Logo image">
-        </div>
-        <div class="background-img-top">
-            <div class="init-text">
-                <p class="mar-inv-ken">Maratona Invertida da Kenzie</p>
-                <p class="text-caps">CHEGOU A HORA DE VOCÊ DERROTAR O VECNA QUE ANDA TE IMPEDINDO DE APRENDER
-                    PROGRAMAÇÃO!</p>
-                <p class="text-non-caps">Aprenda a programar do zero e gratuitamente em apenas5 horas, construa um
-                    projeto próprio e ganhe um certificado!</p>
-            </div>
-        </div>
-    </span>
-    <span class="body-left">
-        <div class="temporadas">
-            <p>Temporadas</p>
-        </div>
-        <div class="temp-temp">
-            <div class="margin">
-                <p class="temp-all">Todas</p>
-            </div>
-            <div class="margin">
-                <p class="temp-1">Temporada 1</p>
-            </div>
-            <div class="margin">
-                <p class="temp-2">Temporada 2</p>
-            </div>
-            <div class="margin">
-                <p class="temp-3">Temporada 3</p>
-            </div>
-        </div>
-        <div class="temp-3-content">
-            <p class="title">Maratona Invertida</p>
-            <p class="temp-title">Temporada 3</p>
-            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de
-                graça!</p>
-            <p class="add-to-line">Adicionar à fila</p>
-        </div>
-        <div class="temp-2-content">
-            <p class="title">Maratona Invertida</p>
-            <p class="temp-title">Temporada 2</p>
-            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de
-                graça!</p>
-            <p class="add-to-line">Adicionar à fila</p>
-        </div>
-        <div class="temp-1-content">
-            <p class="title">Maratona Invertida</p>
-            <p class="temp-title">Temporada 1</p>
-            <p class="temp-content">Aprenda a programar gratuitamente e construa seu projeto próprio e totalmente de
-                graça!</p>
-            <p class="add-to-line">Adicionar à fila</p>
-        </div>
-    </span>
-    <span class="body-right">
-        <div class="reproduction-line-title">
-            <p class="line-text">Fila de reprodução</p>
-        </div>
-        <div class="reproduction-line-temp-1">
-            <p class="line-title">Maratona Invertida</p>
-            <p class="line-temp">Temporada 1</p>
-            <p class="line-watch">Assistir agora</p>
-        </div>
-        <div class="reproduction-line-temp-2">
-            <p class="line-title">Maratona Invertida</p>
-            <p class="line-temp">Temporada 2</p>
-            <p class="line-watch">Assistir agora</p>
-        </div>
-        <div class="reproduction-line-temp-3">
-            <p class="line-title">Maratona Invertida</p>
-            <p class="line-temp">Temporada 3</p>
-            <p class="line-watch">Assistir agora</p>
-        </div>
-    </span>
-</body>
+  <body>
+    <header>
+      <section class="header_logo">
+        <img src="./img/logoMaratona.png" />
+      </section>
+      <section class="header_infos">
+        <h1>Maratona invertida da Kenzie</h1>
+        <p>
+          CHEGOU A HORA DE VOCÊ DERROTAR O VECNA QUE ANDA TE IMPEDINDO DE
+          APRENDER PROGRAMAÇÃO!
+        </p>
+        <p>
+          Aprenda a programar do zero e gratuitamente em apenas 5 horas,
+          construa um projeto próprio e ganhe um certificado!
+        </p>
+      </section>
+    </header>
 
+    <main>
+      <div class="main_left">
+        <nav class="main_nav">
+          <h3>Temporadas</h3>
+          <ul>
+            <li>Todas</li>
+            <li>Temporada 1</li>
+            <li>Temporada 2</li>
+            <li>Temporada 3</li>
+          </ul>
+        </nav>
+
+        <section class="main_vitrine">
+          <article class="main_card">
+            <div class="main_card_top">
+              <h2>Maratona Invertida</h2>
+              <span>Temporada 1</span>
+            </div>
+            <div class="main_card_bottom">
+              <p>
+                Aprenda a programar gratuitamente e contrua seu projeto próprio
+                e totalmente de graça.
+              </p>
+              <span>Adicionar à fila</span>
+            </div>
+          </article>
+          <article class="main_card">
+            <div class="main_card_top">
+              <h2>Maratona Invertida</h2>
+              <span>Temporada 2</span>
+            </div>
+            <div class="main_card_bottom">
+              <p>
+                Aprenda a programar gratuitamente e contrua seu projeto próprio
+                e totalmente de graça.
+              </p>
+              <span>Adicionar à fila</span>
+            </div>
+          </article>
+          <article class="main_card">
+            <div class="main_card_top">
+              <h2>Maratona Invertida</h2>
+              <span>Temporada 3</span>
+            </div>
+            <div class="main_card_bottom">
+              <p>
+                Aprenda a programar gratuitamente e contrua seu projeto próprio
+                e totalmente de graça.
+              </p>
+              <span>Adicionar à fila</span>
+            </div>
+          </article>
+        </section>
+      </div>
+
+      <aside class="main_playlist">
+        <h3>Fila de reprodução</h3>
+        <ul>
+          <li class="playlist_li">
+            <img src="./assets/img/imagemIcone.png" />
+            <div class="playlist_li_center">
+              <div>
+                <h4>Maratona Invertida</h4>
+                <span>Temporada 1</span>
+              </div>
+              <div class="playlist_li_playButton">
+                <img src="./assets/img/play-icon.png" />
+                <span>Assistir agora</span>
+              </div>
+            </div>
+            <div class="playlist_li_end">
+              <button></button>
+            </div>
+          </li>
+        </ul>
+      </aside>
+    </main>
+  </body>
 </html>
