correção imagens, continuando css

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
         <h3>Fila de reprodução</h3>
         <ul>
           <li class="playlist_li">
-            <img src="./assets/img/imagemIcone.png" />
+            <img src="img/imagemIcone.png" />
             <div class="playlist_li_center">
               <div>
                 <h4>Maratona Invertida</h4>
                 <span>Temporada 1</span>
               </div>
               <div class="playlist_li_playButton">
-                <img src="./assets/img/play-icon.png" />
+                <img src="img/play-icon.png" />
                 <span>Assistir agora</span>
               </div>
             </div>
